--- a/Training/Base.lproj/Main.storyboard
+++ b/Training/Base.lproj/Main.storyboard
@@ -63,14 +63,17 @@
                                     <color key="titleColor" red="0.50643324710000004" green="0.41741411969999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dFV-uF-7vR"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.50643324714747784" green="0.41741411970922782" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="loginTextField" destination="Xn5-oC-YTX" id="M9F-0N-XZl"/>
-                        <outlet property="passwordTextField" destination="kWn-nk-YnO" id="6KB-IV-Akv"/>
+                        <outlet property="loginTextField" destination="Xn5-oC-YTX" id="Aom-Rp-6Ab"/>
+                        <outlet property="passwordTextField" destination="kWn-nk-YnO" id="gaK-Qq-MGS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
