--- a/Training/Base.lproj/Main.storyboard
+++ b/Training/Base.lproj/Main.storyboard
@@ -171,6 +171,9 @@
                                 <state key="normal" title="Зарегестрироваться">
                                     <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="registerButtonPressed:" destination="BNF-b5-V3F" eventType="touchUpInside" id="0k0-CT-ktT"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="РЕГИСТРАЦИЯ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OjL-oE-U6R">
                                 <rect key="frame" x="27" y="82" width="361" height="60"/>
@@ -194,7 +197,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="-1068.1159420289855" y="-305.35714285714283"/>
+            <point key="canvasLocation" x="-1171" y="-324"/>
         </scene>
     </scenes>
 </document>
