--- a/Training/Second.storyboard
+++ b/Training/Second.storyboard
@@ -17,7 +17,7 @@
                     <view key="view" contentMode="scaleToFill" id="0ry-fQ-9qe">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.50643324710000004" green="0.41741411969999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="7Na-Cu-4RP"/>
                     </view>
                 </viewController>
