--- a/Training/AboutMe.storyboard
+++ b/Training/AboutMe.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--About Me View Controller-->
         <scene sceneID="SDt-9h-CY6">
             <objects>
-                <viewController id="Zis-Qg-N5I" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AboutMeViewController" id="Zis-Qg-N5I" customClass="AboutMeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1yr-NS-Tk8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
