--- a/Training/Calendar.storyboard
+++ b/Training/Calendar.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Calendar View Controller-->
         <scene sceneID="g9q-O0-rET">
             <objects>
-                <viewController id="taK-6T-ljq" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CalendarViewController" id="taK-6T-ljq" customClass="CalendarViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="c8t-Za-Xyw">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
