--- a/Training/MyTrainings.storyboard
+++ b/Training/MyTrainings.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--My Trainings View Controller-->
         <scene sceneID="yqM-sz-ikU">
             <objects>
-                <viewController id="QjZ-q6-swM" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyTrainingsViewController" id="QjZ-q6-swM" customClass="MyTrainingsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tVh-L3-h2t">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
