--- a/Training/Trainings.storyboard
+++ b/Training/Trainings.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Trainings View Controller-->
         <scene sceneID="Fi9-8m-Q8F">
             <objects>
-                <viewController id="jrd-TK-FxJ" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TrainingsViewController" id="jrd-TK-FxJ" customClass="TrainingsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UHi-eH-1sb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
